Corrected z-index of canvas and and added resize event listener for canvas projection

--- a/src/components/styles/introduction.css
+++ b/src/components/styles/introduction.css
@@ -63,7 +63,7 @@ ul {
 
 #can {
     position: fixed;
-    z-index: 10;
+    z-index: -1;
     width:100%;
     height:100%;
     top: 0;
